{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 33,
  "lineage": "57e424bf-e0ba-9156-69d0-b00003aa2a68",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dbec0c5d225b693",
            "arn": "arn:aws:ec2:us-east-1:971337390020:elastic-ip/eipalloc-03dbec0c5d225b693",
            "association_id": "eipassoc-04662d1b2d3a7bc9d",
            "domain": "vpc",
            "id": "eipalloc-03dbec0c5d225b693",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f8ec1b537123ab90",
            "private_dns": "ip-10-0-1-16.ec2.internal",
            "private_ip": "10.0.1.16",
            "public_dns": "ec2-44-223-202-210.compute-1.amazonaws.com",
            "public_ip": "44.223.202.210",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1bed4f06a3b463d",
            "arn": "arn:aws:ec2:us-east-1:971337390020:instance/i-07e9cfa61bef9db13",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e9cfa61bef9db13",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d12c1a2ba3871267",
            "private_dns": "ip-10-0-2-215.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cb66ac5112bc82e1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a68b8d9bab56703",
            "tags": {
              "Name": "ByeTerraForm"
            },
            "tags_all": {
              "Name": "ByeTerraForm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf3aa03e44492e90"
            ]
          },
          "dependencies": [
            "aws_security_group.terraformSG",
            "aws_subnet.private_subnet",
            "aws_vpc.terraformVPC",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e1bed4f06a3b463d",
            "arn": "arn:aws:ec2:us-east-1:971337390020:instance/i-030467f57660eefc4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030467f57660eefc4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-024ce93784d162669",
            "private_dns": "ip-10-0-1-49.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e3e4508e78fe37a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0412e8a63b30f4c5e",
            "tags": {
              "Name": "HelloTerraForm"
            },
            "tags_all": {
              "Name": "HelloTerraForm"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf3aa03e44492e90"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.terraformSG",
            "aws_subnet.public_subnet",
            "aws_vpc.terraformVPC",
            "data.aws_ami.ubuntu",
            "tls_private_key.my_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971337390020:internet-gateway/igw-0914ceb2104be28f8",
            "id": "igw-0914ceb2104be28f8",
            "owner_id": "971337390020",
            "tags": {
              "Name": "igw-terraform"
            },
            "tags_all": {
              "Name": "igw-terraform"
            },
            "vpc_id": "vpc-03d7a46a1fde4f707"
          },
          "dependencies": [
            "aws_vpc.terraformVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03dbec0c5d225b693",
            "association_id": "eipassoc-04662d1b2d3a7bc9d",
            "connectivity_type": "public",
            "id": "nat-003a42e9b2f2386e6",
            "network_interface_id": "eni-0f8ec1b537123ab90",
            "private_ip": "10.0.1.16",
            "public_ip": "44.223.202.210",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0412e8a63b30f4c5e",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.lb",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet",
            "aws_vpc.terraformVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0914ceb2104be28f8",
            "id": "r-rtb-0b8013238a2ce895e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b8013238a2ce895e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route",
            "aws_vpc.terraformVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971337390020:route-table/rtb-0b8013238a2ce895e",
            "id": "rtb-0b8013238a2ce895e",
            "owner_id": "971337390020",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0914ceb2104be28f8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TerraFormRoute"
            },
            "tags_all": {
              "Name": "TerraFormRoute"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d7a46a1fde4f707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraformVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraformSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971337390020:security-group/sg-0cf3aa03e44492e90",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0cf3aa03e44492e90",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "971337390020",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d7a46a1fde4f707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraformVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971337390020:subnet/subnet-05a68b8d9bab56703",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a68b8d9bab56703",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "971337390020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_tf_subnet"
            },
            "tags_all": {
              "Name": "private_tf_subnet"
            },
            "vpc_id": "vpc-03d7a46a1fde4f707"
          },
          "dependencies": [
            "aws_vpc.terraformVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971337390020:subnet/subnet-0412e8a63b30f4c5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0412e8a63b30f4c5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "971337390020",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_tf_subnet"
            },
            "tags_all": {
              "Name": "public_tf_subnet"
            },
            "vpc_id": "vpc-03d7a46a1fde4f707"
          },
          "dependencies": [
            "aws_vpc.terraformVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraformVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971337390020:vpc/vpc-03d7a46a1fde4f707",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be565dbb54f12378",
            "default_route_table_id": "rtb-01fae4e3d390ad322",
            "default_security_group_id": "sg-0f2a683f6ba8f82b4",
            "dhcp_options_id": "dopt-003235b1ae966d20f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03d7a46a1fde4f707",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01fae4e3d390ad322",
            "owner_id": "971337390020",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971337390020:security-group-rule/sgr-0016d004ca9b6b6f1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0016d004ca9b6b6f1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cf3aa03e44492e90",
            "security_group_rule_id": "sgr-0016d004ca9b6b6f1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraformSG",
            "aws_vpc.terraformVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971337390020:security-group-rule/sgr-08e7e60d433db0a52",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-08e7e60d433db0a52",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cf3aa03e44492e90",
            "security_group_rule_id": "sgr-08e7e60d433db0a52",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraformSG",
            "aws_vpc.terraformVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:971337390020:security-group-rule/sgr-057cf6a3a018e51b2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-057cf6a3a018e51b2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0cf3aa03e44492e90",
            "security_group_rule_id": "sgr-057cf6a3a018e51b2",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraformSG",
            "aws_vpc.terraformVPC"
          ]
        }
      ]
    }
  ]
}